help message in html script

--- a/project/physics/index.html
+++ b/project/physics/index.html
@@ -108,13 +108,8 @@
 
   </script>
   <script>
-
-
-
-
-    
-
-
+    //code physics here    
+    //use draw and helper funtions 
 
     drawFilledCircle(10, 10, 10, "blue", ctx)
   </script>
