--- a/project/physics/index.html
+++ b/project/physics/index.html
@@ -153,7 +153,7 @@
         next+=10
       }
     }
-
+    console.log("e")
 
     const square1 = shape(shapeCordsSquare, 100, 100, 0)
     drawShape(square1)
